--- a/index.html
+++ b/index.html
@@ -99,34 +99,58 @@
     </ol>
     <div class="carousel-inner">
 
-      <div class="carousel-item as active">
-        <div class="hero">        
-          <h5 class="font-weight-bold">La inversión del gobierno Mexicano no debe de ser en petróleo</h4>        
-          <h5>México ya no debe seguir apostándole a la producción de crudo. Lo que México debe hacer es invertir en las energías limpias como la eólica y solar</h5>
-          <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atìculo</button> 
-       </div>
+      <div class="carousel-item as active ">
+      <div id="intro-section" class="view">
+        <div class="mask d-flex  text-center align-items-center">
+          <div class="container px-md-3 px-sm-0">
+            <h3 class="font-weight-bold">La inversión del gobierno Mexicano no debe de ser en petróleo</h4>        
+              <h5>México ya no debe seguir apostándole a la producción de crudo. Lo que México debe hacer es invertir en las energías limpias como la eólica y solar</h5>
+              <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atìculo</button> 
+          </div>
+        </div>
+      </div>
       </div>
       
       <div class="carousel-item es">
-        <div class="hero">        
-            <h3 class="font-weight-bold">Lecciones del “El chico que domo el viento”.</h3>        
-            <h5>Como mexicanos podemos aprender de esta película.</h5>
-          <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atìculo</button> 
-       </div>
+        <div id="intro-section" class="view">
+          <div class="mask d-flex  text-center align-items-center">
+            <div class="container px-md-3 px-sm-0">
+                <h3 class="font-weight-bold">Lecciones del “El chico que domo el viento”.</h3>        
+                <h5>Como mexicanos podemos aprender de esta película.</h5>
+              <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atìculo</button> 
+              </div>
+          </div>
+        </div>
       </div>
 
       <div class="carousel-item is">
-        <div class="hero">          
-            <h3 class="font-weight-bold">Lecciones del “El chico que domo el viento”.</h3>        
-            <h5>Como mexicanos podemos aprender de este de esta película.</h5>
-            <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atìculo</button> 
+        <div id="intro-section" class="view">
+          <div class="mask d-flex  text-center align-items-center">
+            <div class="container px-md-3 px-sm-0">
+              <h3 class="font-weight-bold">Lecciones del “El chico que domo el viento”.</h3>        
+              <h5>Como mexicanos podemos aprender de este de esta película.</h5>
+              <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atìculo</button> 
+                </div>
+          </div>
         </div>
       </div>
 
     </div>
-
+    <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  
      </div>   
 
+
+
+
+     
 
 <br>
 <br>
