--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div id="intro-section" class="view">
         <div class="mask d-flex  text-center align-items-center">
           <div class="container px-md-3 px-sm-0">
-            <h3 class="font-weight-bold">La inversión del gobierno Mexicano no debe de ser en petróleo</h4>        
+            <h3 class="font-weight-bold" style=" font-size:2vw"> La inversión del gobierno Mexicano no debe de ser en petróleo</h4>        
               <h5>México ya no debe seguir apostándole a la producción de crudo. Lo que México debe hacer es invertir en las energías limpias como la eólica y solar</h5>
               <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atìculo</button> 
           </div>
