--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div id="intro-section" class="view">
         <div class="mask d-flex  text-center align-items-center">
           <div class="container px-md-3 px-sm-0">
-            <h3 class="font-weight-bold" style=" font-size:2vw"> La inversión del gobierno Mexicano no debe de ser en petróleo</h4>        
+            <h3 class="font-weight-bold"> La inversión del gobierno Mexicano no debe de ser en petróleo</h4>        
               <h5>México ya no debe seguir apostándole a la producción de crudo. Lo que México debe hacer es invertir en las energías limpias como la eólica y solar</h5>
               <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atìculo</button> 
           </div>
@@ -157,7 +157,7 @@
 
 
 
-
+<!--DE QUE TRATA MI BLOG-->
 <div class="container my-3 p-5 ">
   <!--Section: Content-->
   <section class="dark-grey-text">
@@ -330,10 +330,10 @@
 <div class="container">
 <h2 class="font-weight-bold mb-3 container text-center">Quien soy?</h4>
     <div class="row alert  pt-5 my-5 z-depth-1">
-     <div class="col-lg-2 ">
+     <div class="col-lg-2 container">
           <img class="img-fluid rounded-circle z-depth-1" src="img/Juan/Juan1.jpg" alt="Sample image">
         </div>
-      <div class="col-lg-7">
+      <div class="col-lg-10">
         <h5 class="dark-grey-text mb-3">Juan Gomez</h5>
         <p class="font-weight-light text-muted mb-0">
           A los 23 años emigre a los Estados Unidos con el afán de conseguir un trabajo
