--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
           <div class="container px-md-3 px-sm-0">
             <h3 class="font-weight-bold"> La inversión del gobierno Mexicano no debe de ser en petróleo</h4>        
               <h5>México ya no debe seguir apostándole a la producción de crudo. <br> Lo que México debe hacer es invertir en las energías limpias como la eólica y solar</h5>
-              <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atículo</button> 
-          </div>
+                <a href="lainversiondemexico.html"><button type="button" class="btn responsive btn-white font-weight-bold">Leer Atículo</button> </a>
+            </div>
         </div>
       </div>
       </div>
@@ -142,7 +142,7 @@
     <!-- Section heading -->
     <h2 class="text-center font-weight-bold mb-1 ">¿DE QUÉ TRATA MI BLOG?</h2>
     <!-- Section description -->
-    <p class="text-center lead grey-text mx-auto mb-5">Una frase tuya. <em>Juan Gomez</em> </p>
+    <p class="text-center lead grey-text mx-auto mb-5">Aprendamos del futuro. <em>Juan Gomez</em> </p>
     <!-- Grid row -->
     <div class="row">
       <!-- Grid column -->
