--- a/todoslosblogs.html
+++ b/todoslosblogs.html
@@ -88,8 +88,8 @@
         <div class="row align-items-center h-100">
           <!--Grid column-->
           <div class="col-md-12">
-            <h1 class="mb-4">Una <span class="text-warning">frase</span><span class="cyan-text">tuya</span> .</h1>
-            <p class="mb-4 pb-2 dark-grey-text">Juan Gòmez.</p>
+            <h1 class="mb-4">Aprendamos <span class="text-warning">del </span> <span class="cyan-text">futuro</span> .</h1>
+            <p class="mb-4 pb-2 dark-white-text">Juan Gómez.</p>
           </div>
          </div>
         <!--Grid row-->
@@ -749,31 +749,23 @@
 
 
   
-
 <!-- Footer -->
-<footer class="grey lighten-3 py-4 dark-grey-text">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3"> <img src="img/ico/Juan.ico" width="50px" alt=""></div>
-        <div class="col-md-6">
-          <ul class="list-unstyled d-flex justify-content-center mb-0 mt-2">
-            <li>
-                <a class="mx-4" role="button">Blog</a>
-            </li>
-            <li>
-                <a class="mx-4" role="button">Mis pensamientos</a>
-            </li>
-            <li>
-                <a class="mx-4" role="button">Quién soy yo?</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-3">Todos los derechos reservados</div>
-      </div>
-    </div>
-  </footer>
-  <!-- Footer -->
-  
+<footer class="page-footer font-small  pt-5" style="background-color: rgb(22, 20, 20);">
+
+  <!-- Footer Elements -->
+  <div class="container">
+   <ul class="list-unstyled list-inline text-center py-2">
+      <li class="list-inline-item">JUAN GOMEZ</li>
+    </ul>
+  </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Todos los derechos reservados</a></div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
   
   
 
