--- a/lainversiondemexico.html
+++ b/lainversiondemexico.html
@@ -122,11 +122,13 @@
             <br>
             Explicación en video
         </p>
-  <figure class="wp-block-embed-youtube wp-block-embed is-type-video is-provider-youtube wp-embed-aspect-16-9 wp-has-aspect-ratio"><div class="wp-block-embed__wrapper">
-  <iframe title="¿Por qué el precio del petróleo sufrió su peor caída desde 1991?" width="676" height="380" src="https://www.youtube.com/embed/F7KhI2JwSZU?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div></figure>
-        
 
+        <div class="container">
+          <figure class="wp-block-embed-youtube wp-block-embed is-type-video is-provider-youtube embed-responsive embed-responsive-16by9"><div class="wp-block-embed__wrapper">
+            <iframe title="¿Por qué el precio del petróleo sufrió su peor caída desde 1991?" src="https://www.youtube.com/embed/F7KhI2JwSZU?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </figure>
+            
+        </div>
         </div>
         <div class="row mt-5">
           <div class="col-lg-12 col-md-12 mb-lg-0 mb-5">
