--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="container px-md-3 px-sm-0">
                 <h3 class="font-weight-bold">Lecciones del “El chico que domo el viento”.</h3>        
                 <h5>Como mexicanos podemos aprender de esta película.</h5>
-              <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atículo</button> 
+                <a href="Elchico.html"><button type="button" class="btn responsive btn-white font-weight-bold">Leer Atículo</button></a>
               </div>
           </div>
         </div>
@@ -107,21 +107,21 @@
             <div class="container px-md-3 px-sm-0">
               <h3 class="font-weight-bold">México necesita invertir en el emprendimiento</h3>        
               <h5>Durante muchos años, México ha sobrevivido la explotación de sus recursos naturales y en la espera de la inversión de empresas extrajeras debido a la mano de obra barata que existe.</h5>
-              <button type="button" class="btn responsive btn-white font-weight-bold">Leer Atículo</button> 
-                </div>
+              <a href="Méxiconecesita.html"><button type="button" class="btn responsive btn-white font-weight-bold">Leer Atículo</button></a>
+            </div>
           </div>
         </div>
       </div>
 
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+    <!--<a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </a>
+    </a>-->
   
      </div>   
 
@@ -285,7 +285,7 @@
           A los 23 años emigre a los Estados Unidos con el afán de conseguir un trabajo
            y poder ayudar a mi familia. <br> Pero nunca me imagine qué terminaría estudiando.
             Ahora estudia Economía en la Universidad de California, Davis.</p>
-            <a class="btn btn-rounded color" ></i>Leer más</a>
+            <a class="btn btn-rounded color" href="juanGomez.html" ></i>Leer más</a>
 
 
 
@@ -333,7 +333,7 @@
                       <div>
                     <h5 class="font-weight-bold">Muchos empleos perdidos nunca más regresarán</h3>
                     <p>En México, de acuerdo de la Secretaría del Trabajo y Previsión Social (STPS), se han perdido 346 mil 878 puestos de trabajos debido a la contingencia sanitaria de COVID-19. </p>
-                    <a class="btn  color font-weight-bold"" href="">Leer más</a>
+                    <a class="btn  color font-weight-bold"" href="muchosempleos.html">Leer más</a>
                   </div>
               </div>
             </div>
@@ -345,7 +345,7 @@
                         <div>
                          <h5 class="font-weight-bold">El INSABI no es suficiente </h3>
                          <p>El proyecto de salud del gobierno de Mexico, el Instituto de Salud Para el Bienestar (#INSABI), provee garantizar el derecho a la salud en todos sus niveles y medicamentos gratuitos</p>
-                         <a class="btn  color font-weight-bold"" href="">Leer más</a>
+                         <a class="btn  color font-weight-bold"" href="ElINSABI.html">Leer más</a>
                         </div>
                 </div>
               </div>
@@ -359,7 +359,7 @@
                       <div>
                         <h5 class="font-weight-bold">México necesita invertir en el emprendimiento</h3>
                           <p>México es un país con grandes y múltiples recursos naturales, si volteamos a ver a sus rincones, siempre vamos a encontrar abundantes recursos</p>
-                          <a class="btn  color font-weight-bold"" href="">Leer más</a>
+                          <a class="btn  color font-weight-bold"" href="Méxiconecesita.html">Leer más</a>
                         </div>
                   </div>
                 </div>
