--- a/Elchico.html
+++ b/Elchico.html
@@ -26,11 +26,6 @@
   
 
 
-
-
-
-
-
 <!--Navbar -->
 
 <div class="fixed-top header-transparent a">
@@ -184,47 +179,43 @@
 
     
 <h2 class="text-center font-weight-bold mb-5 p-5 ">ÚLTIMOS POST</h2>
-<!-- Section description -->
-
-
 
       <div class="container mb-5">
         <div class="row">
+
               <div class="col-sm-4">
                 <div class="card card-image " style="background-image: url(img/Img/empleos.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-                  <div class="text-white fondo text-center d-flex align-items-center  py-5 px-4">
+                  <div class="text-white fondo text-center align-items-center  py-5 px-4">
                       <div>
-                    <p class="font-weight-bold">Muchos empleos perdidos nunca más regresarán</h3>
+                    <p class="font-weight-bold">Muchos empleos perdidos nunca más regresarán</h3> <br>
                     <a class="btn  color font-weight-bold"" href="muchosempleos.html">Leer más</a>
                   </div>
               </div>
             </div>
               </div>
       
-              <div class="col-sm-4">
-                <div class="card card-image" style="background-image: url(img/Img/inversion.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-                    <div class="text-white fondo text-center d-flex align-items-center rgba-black-strong py-5 px-4">
-                        <div>
-                         <p class="font-weight-bold">El INSABI no es suficiente </h3>
-                         <a class="btn  color font-weight-bold"" href="ElINSABI.html">Leer más</a>
+            <div class="col-sm-4 content-center ">
+              <div class="card card-image" style="background-image: url(img/Img/inversion.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+                  <div class="text-white fondo text-center  align-items-center rgba-black-strong py-5 px-4">
+                      <div>
+                        <hp class="font-weight-bold">El INSABI no es suficiente</h3> <br>
+                          <a class="btn  color font-weight-bold" href="ElINSABI.html">Leer más</a>
                         </div>
+                  </div>
                 </div>
               </div>
-            </div>
 
             <div class="col-sm-4">
-              <!-- Card -->
               <div class="card card-image" style="background-image: url(img/Img/emprendimiento.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-                <!-- Content -->
-                  <div class="text-white fondo text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                  <div class="text-white fondo text-center align-items-center rgba-black-strong py-5 px-4">
                       <div>
-                        <hp class="font-weight-bold">La inversión del gobierno Mexicano no debe de ser en petróleo </h3>
+                        <hp class="font-weight-bold">La inversión del gobierno Mexicano no debe de ser en petróleo </h3> <br>
                           <a class="btn  color font-weight-bold" href="lainversiondemexico.html">Leer más</a>
                         </div>
                   </div>
                 </div>
-                <!--End Card-->
               </div>
+
       </div>
     </div>
 
@@ -234,6 +225,7 @@
             <div class="container content-center text-center">
               <a class="btn color font-weight-bold" href="todoslosblogs.html">Ver todos los blogs</a>
             </div>
+
 
 
 
