--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 
 <!--DE QUE TRATA MI BLOG-->
-<div class="container my-3 p-5 ">
+<div class="container-fluid my-3 p-5 ">
   <!--Section: Content-->
   <section class="dark-grey-text">
     <!-- Section heading -->
@@ -280,7 +280,7 @@
           <img class="img-fluid rounded-circle z-depth-1" src="img/Juan/Juan1.jpg" alt="Sample image">
         </div>
       <div class="col-lg-10">
-        <h5 class="dark-grey-text mb-3 font-weight-bold">Juan Gómez</h5>
+        <h5 class="dark-grey-text mb-3 font-weight-bold mb-3 my-2">Juan Gómez</h5>
         <p class="font-weight-light text-muted mb-0">
           A los 23 años emigre a los Estados Unidos con el afán de conseguir un trabajo
            y poder ayudar a mi familia. <br> Pero nunca me imagine qué terminaría estudiando.
@@ -504,22 +504,11 @@
 <!-- Footer -->
 <footer class="grey lighten-3 py-4 dark-grey-text">
   <div class="container">
-    <div class="row">
-      <div class="col-md-3"> <img src="img/ico/Juan.ico" width="50px" alt=""></div>
-      <div class="col-md-6">
-        <ul class="list-unstyled d-flex justify-content-center mb-0 mt-2">
-          <li>
-              <a class="mx-4" role="button">Blog</a>
-          </li>
-          <li>
-              <a class="mx-4" role="button">Mis pensamientos</a>
-          </li>
-          <li>
-              <a class="mx-4" role="button">Quién soy yo?</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-3">Todos los derechos reservados</div>
+    <div class="row ">
+      <div class="col-md-4 text-center "> <img src="img/ico/Juan.ico" width="50px" alt=""></div>
+      <div class="col-md-2 text-center">Todos los blogs</div>
+      <div class="col-md-2 text-center">Mis pensamientos</div>
+      <div class="col-md-4 text-center">Todos los derechos reservados</div>
     </div>
   </div>
 </footer>
