--- a/lainversiondemexico.html
+++ b/lainversiondemexico.html
@@ -193,9 +193,9 @@
         <div class="row">
               <div class="col-sm-4">
                 <div class="card card-image " style="background-image: url(img/Img/empleos.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-                  <div class="text-white fondo text-center d-flex align-items-center  py-4 px-4">
+                  <div class="text-white fondo text-center  align-items-center  py-4 px-4">
                       <div>
-                    <p class="font-weight-bold">Muchos empleos perdidos nunca más regresarán</h3>
+                    <p class="font-weight-bold">Muchos empleos perdidos nunca más regresarán</h3><br>
                     <a class="btn  color font-weight-bold"" href="muchosempleos.html">Leer más</a>
                   </div>
               </div>
@@ -204,9 +204,9 @@
       
               <div class="col-sm-4">
                 <div class="card card-image" style="background-image: url(img/Img/inversion.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-                    <div class="text-white fondo text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                    <div class="text-white fondo text-center  align-items-center rgba-black-strong py-5 px-4">
                         <div>
-                         <p class="font-weight-bold">El INSABI no es suficiente </h3>
+                         <p class="font-weight-bold">El INSABI no es suficiente </h3><br>
                          <a class="btn  color font-weight-bold"" href="ElINSABI.html">Leer más</a>
                         </div>
                 </div>
@@ -217,9 +217,9 @@
               <!-- Card -->
               <div class="card card-image" style="background-image: url(img/Carrousel/elchicoquedomoelviento.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
                 <!-- Content -->
-                  <div class="text-white fondo text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                  <div class="text-white fondo text-center  align-items-center rgba-black-strong py-5 px-4">
                       <div>
-                        <hp class="font-weight-bold">El chico que domo el viento</h3>
+                        <hp class="font-weight-bold">El chico que domo el viento</h3><br>
                           <a class="btn  color font-weight-bold"" href="Elchico.html">Leer más</a>
                         </div>
                   </div>
