--- a/muchosempleos.html
+++ b/muchosempleos.html
@@ -162,9 +162,9 @@
               <div class="row">
                     <div class="col-sm-4">
                       <div class="card card-image " style="background-image: url(img/Img/dos.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-                        <div class="text-white fondo text-center d-flex align-items-center  py-4 px-4">
+                        <div class="text-white fondo text-center  align-items-center  py-4 px-4">
                             <div>
-                          <p class="font-weight-bold">La inversión del gobierno Mexicano no debe de ser en petróleo</h3>
+                          <p class="font-weight-bold">La inversión del gobierno Mexicano no debe de ser en petróleo.</h3> <br>
                           <a class="btn  color font-weight-bold"" href="lainversiondemexico.html">Leer más</a>
                         </div>
                     </div>
@@ -173,9 +173,9 @@
             
                     <div class="col-sm-4">
                       <div class="card card-image" style="background-image: url(img/Img/inversion.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-                          <div class="text-white fondo text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                          <div class="text-white fondo text-center align-items-center rgba-black-strong py-5 px-4">
                               <div>
-                               <p class="font-weight-bold">El INSABI no es suficiente </h3>
+                               <p class="font-weight-bold">El INSABI no es suficiente </h3><br>
                                <a class="btn  color font-weight-bold"" href="ElINSABI.html">Leer más</a>
                               </div>
                       </div>
@@ -186,9 +186,9 @@
                     <!-- Card -->
                     <div class="card card-image" style="background-image: url(img/Carrousel/elchicoquedomoelviento.jpg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
                       <!-- Content -->
-                        <div class="text-white fondo text-center d-flex align-items-center rgba-black-strong py-5 px-4">
+                        <div class="text-white fondo text-center align-items-center rgba-black-strong py-5 px-4">
                             <div>
-                              <hp class="font-weight-bold">El chico que domo el viento</h3>
+                              <hp class="font-weight-bold">El chico que domo el viento</h3><br>
                                 <a class="btn  color font-weight-bold"" href="Elchico.html">Leer más</a>
                               </div>
                         </div>
